# plover-minimal-english-stenotype

./: README.md  minimal_english_stenotype.py  plover_minimal_english_stenotype.py  setup.cfg
