[metadata]
name = plover_minimal_english_stenotype
version = 1.1.0
description = Plover English stenotype system plug-in with no automatic unfolding of orthography rules
long_description = file:README.md
long_description_content_type = text/markdown
author = Emily Easteal
author_email = emily@easteal.dev
url = https://github.com/EPLHREU/plover-minimal-english-stenotype
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
install_requires =
  plover
py_modules =
  plover_minimal_english_stenotype

[options.entry_points]
plover.system =
 Minimal English Stenotype = plover_minimal_english_stenotype
